...
                            backgroundColor: Color(0xFF173664),
                            foregroundColor: Colors.white,
                            shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(8)),
                          ),
                          onPressed: () => Navigator.of(context).pop(true),
                          child: const Text(
                            "SÍ",
                            style: TextStyle(fontFamily: "Montserrat", fontWeight: FontWeight.w600),
                          ),
                        ),
                      ],
                    );
                  },
...
                  ? const LoadingIndicator()
                  : Container(
                      height: 48,
                      decoration: BoxDecoration(color: const Color(0xFF173664), borderRadius: BorderRadius.circular(8)),
                      child: const Center(
                        child: Text(
                          'GENERAR',
                          style: TextStyle(
                            color: Colors.white,
                            fontSize: 14,
                            fontFamily: 'Montserrat',
                            fontWeight: FontWeight.w600,
                            height: 1.83,
...
